[package]
name = "consulrs"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "An asynchronous Rust client library for the Hashicorp Consul API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/consulrs"
keywords = ["Consul", "API", "Client", "Hashicorp"]
edition = "2018"

[workspace]
members = [
    "consulrs_derive",
]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
consulrs_derive = { version = "0.1", path = "consulrs_derive" }
derive_builder = "0.20"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustify = "0.6"
rustify_derive = "0.5"
serde = "1"
serde_json = "1"
serde_with = "3"
thiserror = "2"
tracing = "0.1"
url = "2"

[dev-dependencies]
dockertest-server = { version = "0.1", features=["hashi"] }
env_logger = "0.11"
futures = "0.3"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
